k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aoe2-coach-backend-svc
  namespace: aoe2-coach
  labels:
    app: aoe2-coach-backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      name: http
      protocol: TCP
  selector:
    app: aoe2-coach-backend
