k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aoe2-coach-frontend-svc
  namespace: aoe2-coach
  labels:
    app: aoe2-coach-frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
      protocol: TCP
  selector:
    app: aoe2-coach-frontend
